# python-course

./: ANCHOR.md  ARCHITECTURE.md  CLAUDE.md  GLOSSARY.md  RECREATE_PROMPT.md  SETUP.md  SPEC.md  STATE.md  WORKFLOW.md
.claude/commands/: reground.md
.claude/hooks/: session-start.sh
python-crash-course/: .gitignore  HOW-TO-USE.md  PROGRESS.md  README.md  SPEC.md  part-0.md  part-1.md  part-2.md  part-3.md  part-4.md  part-5.md  part-6.md  part-7.md  pyproject.toml
python-crash-course/src/crash_course/: __init__.py
python-crash-course/tests/: test_smoke.py
python-crash-course/tools/: lint_workbook.py
wiki/: CON-0001.md  CON-0002.md  DEC-0001.md  DEC-0002.md  DEC-0003.md  DEC-0004.md  DEC-0005.md  DEC-0006.md  DEC-0007.md  DEC-0008.md  INDEX.md  RUL-0001.md  RUL-0002.md  RUL-0003.md  _TEMPLATE-concept.md  _TEMPLATE-decision.md  _TEMPLATE-rule.md  build_index.py
